# rust-practice

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: ACKNOWLEDGEMENTS.md  CHANGELOG.md
docs/doxygen-html/: .rustc_info.json  .rustdoc_fingerprint.json
docs/doxygen-html/doc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/doxygen-html/doc/libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ACCOUNTING.html  constant.ADDR_COMPAT_LAYOUT.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  (+4346 more)
docs/gcov-html/: .rustc_info.json  coverage.json  index.html
docs/gcov-html/src/: file.rs.html  index.html  main.rs.html  math.rs.html  temp.rs.html
docs/tarpaulin-html/: .rustc_info.json  tarpaulin-report.html
docs/tarpaulin-html/tarpaulin/: rust-practice-coverage.json
scripts/: changeLog.sh  coverage.sh  run_doxygen.sh  run_grcov.sh  run_tarpaulin_coverage.sh
src/: file.rs  main.rs  math.rs  temp.rs
test/: test_main.rs
(+206 files in other folders)
