[package]
name = "rust-practice"
version = "0.1.0"
description = "A programming application in Rust"
repository = "https://github.com/Neeraj2K18/rust-practice"
readme = "README.md"
license = "MIT"
authors = ["Neeraj Singhal <neerajsinghal93@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
