[package]
name = "rust-practice"
version = "0.2.0"
description = "A programming application in Rust"
repository = "https://github.com/Neeraj2K18/rust-practice"
readme = "README.md"
license = "MIT"
authors = ["Neeraj Singhal <neerajsinghal93@gmail.com>"]
edition = "2021"
homepage = "https://singhaln93.github.io/rust-practice/"
documentation = "https://singhaln93.github.io/rust-practice/docs/doxygen-html/doc/rust_practice/index.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"